--- a/account/templates/records.html
+++ b/account/templates/records.html
@@ -95,6 +95,25 @@
 	table.table td .add {
 		display: none;
 	}
+    .pagination {
+        text-align: center;
+        margin-top:1em;
+    }
+
+    .pagination-action:hover {
+        color: #3354AA;
+    }
+
+    .pagination-number {
+        background-color:#6D85C7;
+        padding: 0.5em 0.8em;
+        color: #fff;
+        border-radius: 2px;
+    }
+
+    .pagination-number:hover, .pagination-current {
+        background-color: #3354AA
+    }
 </style>
 <script type="text/javascript">
 $(document).ready(function(){
@@ -188,32 +207,29 @@ $(document).ready(function(){
                         <td><a href="/delete/{{i.id}}" class="btn btn-danger" >DELETE</td>
                     </tr>
                     {% endfor %}
-                    <!-- <tr>
-                        <td>Peter Parker</td>
-                        <td>Customer Service</td>
-                        <td>(313) 555-5735</td>
-                        <td>(313) 555-5735</td>
-                        <td>(313) 555-5735</td>
-                        <td>
-							<a class="add" title="Add" data-toggle="tooltip"><i class="material-icons">&#xE03B;</i></a>
-                            <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                            <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Fran Wilson</td>
-                        <td>Human Resources</td>
-                        <td>(503) 555-9931</td>
-                        <td>(313) 555-5735</td>
-                        <td>(313) 555-5735</td>
-                        <td>
-							<a class="add" title="Add" data-toggle="tooltip"><i class="material-icons">&#xE03B;</i></a>
-                            <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                            <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
-                        </td>
-                    </tr>       -->
                 </tbody>
             </table>
+            <div class="pagination">
+                {% if data.has_previous %}
+                    <a class="pagination-action" href="?page=1"><<</a>
+                    <a class="pagination-action" href="?page={{data.previous_page_number}}"><</a>
+                {% endif %}
+
+                {%for num in data.paginator.page_range %}
+
+
+                {% if data.number == num %}
+                   <span class="pagination-number pagination-current">{{num}}</span>
+                {% elif num > data.number|add:'-2' and num < data.number|add:'2' %}
+                <a class="pagination-number" href="?page={{num}}">{{num}}</a>
+                {% endif %}
+                {% endfor %}
+
+                {% if data.has_next %}
+                <a class="pagination-action" href="?page={{data.next_page_number}}">></a>
+                <a class="pagination-action" href="?page={{data.paginator.num_pages}}">>></a>
+                {% endif %}
+            </div>
         </div>
     </div>     
 </body>
