bootstrap header added and added session logout

--- a/account/templates/records.html
+++ b/account/templates/records.html
@@ -171,6 +171,21 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
+        <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Enquiry Form Website</a>
+                  </div>
+                  <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="{% url 'enquiry-form' %}">Enquiry Form</a></li>
+                    <li><a href="#">Records</a></li>
+                    {% if request.session.username == "karan" %}
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% endif %}
+                  </ul>
+                </div>
+              </nav>
     <div class="container">
         <div class="table-wrapper">
             <div class="table-title">
